SERVER-11969 w:0 on sharded write command is returning upserted values